# ROS2

./: .gitignore  README.md  read_me.txt
CRTI/install/: local_setup.sh
CRTI/models/test_tunnel/meshes/: TestShape.dae  TestShape2.dae
CRTI/src/Code/: package.xml
CRTI/src/Code/yolo/: yolo_node.py
CRTI/src/sdf/: word_demo.sdf
models/test_tunnel/: model.config  model.sdf
odometry_ws/install/: setup.sh
odometry_ws/models/test_tunnel/meshes/: TestShapeRust.dae
odometry_ws/src/Code/: yolo.pkg
odometry_ws/src/Code/launch/: yolo.launch
src/Code/: setup.py
src/Code/launch/: yolo_launch.py
src/sdf/: word_demo.sdf  yolo_node.py
