<?xml version="1.0"?>
<package format="2">
  <name>yolo</name>
  <version>0.0.1</version>
  <description>YOLO node package for object detection</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
